# aws-todo-api

./: .gitignore  Dockerfile  compose.yml  pyproject.toml
.github/instructions/: test.instructions.md
app/: main.py
app/application/: task.py  todo.py
app/domain/: task.py  task_list.py  task_list_repository.py  task_repository.py  user.py
app/infrastructure/db/: dydb_task_list_repository.py  dynamodb_task_list_repository.py  dynamodb_task_repository.py
app/interface/api/: dependencies.py
app/interface/api/router/: __init__.py  task.py  task_list.py
app/interface/api/schema/: task.py  task_list.py
app/usecase/: task.py
tests/application/: test_todo.py
tests/domain/: test_task.py  test_task_list.py  test_task_repository.py  test_user.py
tests/interface/api/router/: test_task.py  test_task_list.py
tests/interface/api/schema/: test_task.py  test_task_list.py
